unpackaged/main/default/objects/Email_Preferences__mdt/Email_Preferences__mdt.object-meta.xml
<CustomObject>
    <description>MDT to hold config needs of setting Email preferences on signups.</description>
    <label>Email Preferences</label>
    <pluralLabel>Email Preferences</pluralLabel>
</CustomObject>