unpackaged/main/default/objects/Email_Preferences__mdt/fields/BrandId__c.field-meta.xml
<CustomField>
    <fullName>BrandId__c</fullName>
    <label>BrandId</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>