unpackaged/main/default/objects/Email_Preferences__mdt/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>