unpackaged/main/default/objects/Email_Preferences__mdt/fields/PrefCenterInterests__c.field-meta.xml
<CustomField>
    <fullName>PrefCenterInterests__c</fullName>
    <label>PrefCenterInterests</label>
    <length>20</length>
    <type>Text</type>
</CustomField>