unpackaged/main/default/objects/Email_Preferences__mdt/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>Source System</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>