unpackaged/main/default/objects/Email_Preferences__mdt/listViews/AllRecords.listView-meta.xml
<ListView>
    <fullName>AllRecords</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BrandId__c</columns>
    <columns>Location__c</columns>
    <columns>SourceSystem__c</columns>
    <columns>WelcomeSource__c</columns>
    <columns>PrefCenterInterests__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllRecords</label>
</ListView>